@@ -1,3 +1,8 @@
+2008-12-12  Vladimir Tzankov  <vtzankov@gmail.com>
+
+	* spvw_global.d (add_per_thread_special_var): sync initialization of
+	threads symvalues via threads lock
+
 2008-12-12  Sam Steingold  <sds@gnu.org>
 
 	* modules/i18n/gettext.c (SET-LOCALE, res_to_obj): use safe_to_string
